Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for 1.0.6 [2005-08-10] #13689 "Xmas release patch 6"
============================================================

 o #13680 Added prevention of duplicate persistent subscribes in persistent storage

 o #13677 Added I_Storage

 o #13667-13669 Added embedded message dumper for persistent queue and persistent map implementation
 
 o #13667 JDBC persistence: Trimming columns 'type' and 'flag'
   After DB export -> import there could occur some white spaces


Changes for 1.0.5 [2005-08-08] #13663 "Xmas release patch 5"
============================================================

 o NOTE: You need to remove the 'HtmlMonitorPlugin'
   section in xmlBlasterPlugins.xml to be able to run with JDK 1.3.
   It uses the logging from JDK 1.4.

 o Tested C and C++ client library with icc 9.0 (the new Intel C++ compiler release)

 o #13656 Bugifx Memoryleak for XPath unSubscribes
   On XPath subscriptions which hit many topics the unSubscribe
   could lead to a memory leak in the server.

 o #13655 JMX: Fixed so that JMX queue names displayed are identical
   to the database name XB_ENTRIES.queueNames

 o #13649 Added JMX methods
   - I_ProgressListener for SOCKET protocol plugin
   - Callback delivery states and statistics
   - Added client side queue dumping

 o #13638 Added JMX observation for SubscriptionInfo and the I_Map cache implementation
   Added javadoc for JMX methods, see for example I_AdminNode

 o #13635 Fixed Sql92Filter mime plugin bug reported by Nelson Silva
   <clientProperty name='canal' type='String'>teste2</clientProperty>
   Filtering failed when type='String' was specified

 o #13626 MS SQLServer 2005 support added
   See xmlBlaster/config/xmlBlaster.properties.template

 o #13593 C client library
   Added progress listener function pointer to access the number of read bytes on socket during receive