@@ -1,6 +1,12 @@
 Release notes for xmlBlaster (http://www.xmlBlaster.org)
 The "#99999" numbers are Subversion revision numbers.
 
+Changes for current repository (svn)
+====================================
+
+ o #13694 Sending JMX notifications on client login/logout and on log.error
+
+
 Changes for 1.0.6 [2005-08-10] #13689 "Xmas release patch 6"
 ============================================================
 
